<resources>
    <string name="app_name">玩Android</string>
    <string name="text_loading">正在加载中</string>
    <string name="network_connection_failed">网络连接失败</string>
    <string name="network_request_timeout">网络请求超时</string>
    <string name="api_data_parse_error">数据解析错误</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="text_login">登录</string>
    <string name="text_account">账号</string>
    <string name="text_password">密码</string>
    <string name="text_register">注册</string>
    <string name="account_can_not_be_empty">账号不能为空</string>
    <string name="password_can_not_be_empty">密码不能为空</string>
    <string name="text_logining">正在登录</string>
    <string name="text_confirm_password">确认密码</string>
    <string name="account_length_over_three">账号不能少于三位</string>
    <string name="confirm_password_can_not_be_empty">确认密码不能为空</string>
    <string name="password_length_over_six">密码不能少于6位</string>
    <string name="two_password_are_inconsistent">两次输入的密码不一致</string>
    <string name="text_registering">正在注册...</string>
    <string name="home">首页</string>
    <string name="mine">我的</string>
    <string name="discovery">发现</string>
    <string name="system">体系</string>
    <string name="navigation">导航</string>
    <string name="text_write_storage">读写权限</string>
    <string name="permission_get">标题</string>
    <string name="permission_desc">描述</string>
    <string name="press_again_to_exit">再按一次退出</string>
    <string name="search_hint">搜过关键字以空格隔开</string>
    <string name="text_hot">热门</string>
    <string name="text_last">最新</string>
    <string name="text_ground">广场</string>
    <string name="text_project">项目</string>
    <string name="text_public_no">公众号</string>
    <string name="login_register">登录/注册</string>
    <string name="my_points">我的积分</string>
    <string name="my_points_rank">积分排行</string>
    <string name="my_share">我的分享</string>
    <string name="my_collect">我的收藏</string>
    <string name="my_view_history">浏览历史</string>
    <string name="my_open_source">开源许可</string>
    <string name="my_about_author">关于作者</string>
    <string name="my_system_setting">系统设置</string>
    <string name="text_default">默认</string>
    <string name="system_settings">系统设置</string>
    <string name="night_mode">夜间模式</string>
    <string name="font_size">字体大小</string>
    <string name="clear_cache">清除缓存</string>
    <string name="check_version">版本更新</string>
    <string name="already_latest_version">已经是最新版本</string>
    <string name="abount_us">关于我们</string>
    <string name="logout">退出登录</string>
    <string name="current_version">当前版本</string>
    <string name="text_font_size">字体大小</string>
    <string name="text_sure">确认</string>
    <string name="text_cancel">取消</string>
    <string name="confirm_clear_cache">确认清除缓存?</string>
    <string name="confirm_logout">确认退出登录？</string>
    <string name="reload">重新加载</string>
    <string name="network_not_available">网络似乎除了点问题&#8230;</string>
    <string name="everyone_search">大家都在搜</string>
    <string name="frequently_website">常用网址</string>
    <string name="text_new">新</string>
    <string name="anonymous">匿名</string>
    <string name="load_failed">加载失败</string>
    <string name="load_end">加载完成</string>
    <string name="no_data">没有相关数据</string>
    <string name="text_top">置顶</string>
    <string name="text_fresh">新</string>
    <string name="text_history">历时记录</string>
    <string name="confirm_delete_history">确认删除历史记录</string>
    <string name="submit">提交</string>
    <string name="share_article">分享文章</string>
    <string name="title">标题</string>
    <string name="link">链接</string>
    <string name="share_people">分享人</string>
    <string name="tips">温馨提示</string>
    <string name="title_hint">请输入您要分享的文章标题，100字以内。</string>
    <string name="link_hint">请输入您要分享的文章链接。</string>
    <string name="tips_content">1.只要是任何好文都可以分享哈，并不一定要是原创！投递的文章会进入广场tab；\n2.CSDN、掘金、简书等官方博客站点会直接通过，不需要审核；\n3.其他个人站点会进入审核阶段，不要投递任何无效链接，测试的请尽快删除，否则可能会对你的账号产生一定影响;\n4.目前处于测试阶段，如果你发现500等错误，可以向我提交日志，让我们一起使网站变得更好；\n5.由于本站只有我一个人开发与维护，会尽力保证24小时内审核，当然有可能哪天太累，会延期，请保持佛系&#8230;</string>
    <string name="share_article_success">文章分享成功</string>
    <string name="sharing_article">正在分享文章&#8230;</string>
    <string name="title_toast">文章标题不能为空</string>
    <string name="link_toast">文章链接不能为空</string>
    <string name="hot_search">热门搜索</string>
    <string name="search_history">搜索历史</string>
    <string name="level_rank">等级: %1$d\t\t\t排名: %2$d</string>
</resources>
