<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_48"
            android:background="@color/bgColorPrimary"
            android:elevation="@dimen/dp_2"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivBack"
                android:layout_width="@dimen/dp_48"
                android:layout_height="@dimen/dp_48"
                android:layout_marginStart="@dimen/dp_4"
                android:layout_marginEnd="@dimen/dp_4"
                android:background="?actionBarItemBackground"
                android:padding="@dimen/dp_12"
                android:src="@drawable/ic_arrow_back_black_24dp"
                android:tint="@color/textColorPrimary" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="sans-serif-medium"
                android:text="@string/share_article"
                android:textColor="@color/textColorPrimary"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tvSubmit"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_gravity="end|center_vertical"
                android:background="?actionBarItemBackground"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:text="@string/submit"
                android:textSize="14sp" />
        </FrameLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/bgColorPrimary">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_16"
                    android:layout_marginTop="@dimen/dp_32"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/title"
                    android:textColor="@color/textColorPrimary"
                    android:textSize="@dimen/sp_14" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/acetTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dp_16"
                    android:background="@drawable/shape_share_input"
                    android:gravity="start"
                    android:hint="@string/title_hint"
                    android:lineSpacingExtra="@dimen/dp_4"
                    android:lines="2"
                    android:maxLength="100"
                    android:maxLines="3"
                    android:padding="@dimen/dp_8"
                    android:textColor="@color/textColorPrimary"
                    android:textColorHint="@color/textColorThird"
                    android:textSize="@dimen/sp_14" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/link"
                    android:textColor="@color/textColorPrimary"
                    android:textSize="13sp" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/acetlink"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dp_16"
                    android:background="@drawable/shape_share_input"
                    android:gravity="start"
                    android:hint="@string/link_hint"
                    android:imeOptions="actionDone"
                    android:lineSpacingExtra="@dimen/dp_4"
                    android:lines="3"
                    android:maxLines="3"
                    android:padding="@dimen/dp_8"
                    android:textColor="@color/textColorPrimary"
                    android:textColorHint="@color/textColorThird"
                    android:textSize="@dimen/sp_14" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_16"
                    android:layout_marginTop="@dimen/dp_16"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/share_people"
                    android:textColor="@color/textColorPrimary"
                    android:textSize="@dimen/sp_14" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/acetSharePeople"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dp_16"
                    android:background="@drawable/shape_share_input"
                    android:enabled="false"
                    android:lineSpacingExtra="@dimen/dp_4"
                    android:lines="1"
                    android:maxLines="1"
                    android:padding="@dimen/dp_8"
                    android:textColor="@color/textColorPrimary"
                    android:textColorHint="@color/textColorThird"
                    android:textSize="@dimen/sp_14" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/tips"
                    android:textColor="@color/textColorPrimary"
                    android:textSize="13sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:lineSpacingExtra="2dp"
                    android:text="@string/tips_content"
                    android:textColor="@color/textColorPrimary"
                    android:textSize="13sp" />

            </LinearLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>