<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/dp_20"
    app:cardCornerRadius="@dimen/dp_10">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/txt_dialog_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_20"
            android:text="@string/text_font_size"
            android:textColor="@color/textColorPrimary"
            android:textSize="@dimen/sp_16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txt_dialog_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_20"
            android:text="@string/text_default"
            android:textColor="@color/textColorPrimary"
            android:textSize="@dimen/sp_16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_dialog_title" />


        <View
            android:id="@+id/view_update_dialog"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            android:layout_marginTop="@dimen/dp_20"
            android:background="@color/colorGrayLight"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/lyt_update_dialog"
            app:layout_constraintTop_toBottomOf="@+id/txt_dialog_content" />

        <LinearLayout
            android:id="@+id/lyt_update_dialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent">

            <TextView
                android:id="@+id/txt_dialog_sure"
                android:layout_width="0dp"
                android:layout_height="@dimen/dp_50"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/text_sure"
                android:textColor="@color/colorGreen"
                android:textSize="@dimen/sp_14" />

            <View
                android:layout_width="@dimen/dp_1"
                android:layout_height="match_parent"
                android:background="@color/colorGrayLight" />

            <TextView
                android:id="@+id/txt_dialog_cancel"
                android:layout_width="0dp"
                android:layout_height="@dimen/dp_50"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/text_cancel"
                android:textColor="@color/textColorPrimary"
                android:textSize="@dimen/sp_14" />
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>