<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_48"
            android:background="@color/bgColorPrimary"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/img_register_close"
                android:layout_width="@dimen/dp_48"
                android:layout_height="@dimen/dp_48"
                android:layout_gravity="start"
                android:layout_marginStart="@dimen/dp_4"
                android:background="?actionBarItemBackground"
                android:padding="@dimen/dp_12"
                android:src="@drawable/ic_arrow_back_black_24dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="sans-serif-medium"
                android:text="@string/text_register"
                android:textSize="@dimen/sp_16" />
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="@dimen/dp_72"
                android:layout_height="@dimen/dp_72"
                android:layout_marginTop="@dimen/dp_48"
                android:src="@drawable/ic_android" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_8"
                android:fontFamily="serif"
                android:text="@string/app_name"
                android:textColor="@color/textColorPrimary"
                android:textSize="@dimen/sp_20" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txt_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_16"
                android:layout_marginTop="@dimen/dp_48"
                android:layout_marginEnd="@dimen/dp_16"
                android:hint="@string/text_account">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_account"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLength="20"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/textColorPrimary"
                    android:textSize="@dimen/sp_14" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_16"
                android:layout_marginTop="@dimen/dp_16"
                android:layout_marginEnd="@dimen/dp_16"
                android:hint="@string/text_password"
                android:textColorHint="@color/textColorPrimary"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/textColorThird">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:maxLength="20"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/textColorPrimary"
                    android:textSize="@dimen/sp_14" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txt_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_16"
                android:layout_marginTop="@dimen/dp_16"
                android:layout_marginEnd="@dimen/dp_16"
                android:hint="@string/text_confirm_password"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/textColorPrimary">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionGo"
                    android:inputType="textPassword"
                    android:maxLength="20"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/textColorPrimary"
                    android:textSize="@dimen/sp_14" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_register"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_38"
                android:layout_marginStart="@dimen/dp_16"
                android:layout_marginTop="@dimen/dp_48"
                android:layout_marginEnd="@dimen/dp_16"
                android:text="@string/text_register"
                android:background="@drawable/shape_bg_btn"
                android:textColor="@color/textColorPrimary"
                android:textSize="@dimen/sp_14" />
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>